Made placeholder texts more meaningful

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -101,18 +101,18 @@
     <div class="container my-3">
       <div class="d-md-flex">
         <div class="input-group my-3">
-          <input type="text" class="form-control rounded search-text" placeholder="Search by" onkeyup="filterNotes();" />
+          <input type="text" class="form-control rounded search-text" placeholder="Search" onkeyup="filterNotes();" />
         </div>
         <div class="input-group my-3 d-md-none">
           <select class="form-control search-type" onchange="filterNotes();">
-            <option value="title" selected>Title</option>
-            <option value="tag">Tag</option>
+            <option value="title" selected>By Title</option>
+            <option value="tag">By Tag</option>
           </select>
         </div>
         <div class="input-group my-3 w-25 d-none d-md-flex">
           <select class="form-control search-type" onchange="filterNotes();">
-            <option value="title" selected>Title</option>
-            <option value="tag">Tag</option>
+            <option value="title" selected>By Title</option>
+            <option value="tag">By Tag</option>
           </select>
         </div>
       </div>
