--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,6 +42,22 @@
       tr:nth-child(even) {
         background-color: #dddddd;
       }
+      .card {
+        overflow: hidden;
+      }
+      .card-text {
+        height: 54px;
+        margin-bottom: 0rem;
+      }
+      .modal-txt-area {
+        display: block;
+        resize: none;
+        min-height: 100px !important;
+        overflow: inherit !important;
+      }
+      .full_note{
+        overflow: hidden !important;
+      }
     </style>
   </head>
   <body>
@@ -121,16 +137,21 @@
     <div class="container my-3">
       <div class="row my-3">
         <% notes.forEach(function(note){ %>
-        <div class="col-sm-4 my-3 note">
+        <div class="col-sm-4 my-3">
           <div class="card">
-            <h5 class="card-title card-header note-title" id="cardTitle_<%= note._id %>">
+            <h5 class="card-title card-header" id="cardTitle_<%= note._id %>">
               <%= note.title %>
             </h5>
             <div class="card-body">
-              <p class="card-text" id="cardDescription_<%= note._id %>">
+              <% var len = note.description.length %>
+              <p class="full_note card-text" id="cardDescription_<%= note._id %>">
                 <%= note.description %>
               </p>
-              <p class="card-text note-tag" id="cardTags_<%= note._id %>">
+              <% if(len > 90){ %>
+                <a href="#" onclick="showMore(`cardDescription_<%= note._id%>`)" style="text-decoration: none;" data-bs-toggle="modal" data-bs-target="#exampleModal4" >Show more</a>
+              <% } %> 
+                <br>
+              <p class="card-text" id="cardTags_<%= note._id %>" style="margin-top: 20px;">
                 <%= note.tags %>
               </p>
               <a href="#" style="padding-right: 10px"
@@ -150,6 +171,29 @@
       </div>
     </div>
 
+    <!-- Show more modal -->
+    <div class="modal fade" id="exampleModal4" tabindex="-1" aria-labelledby="exampleModalLabel4" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="ModalTitle4"></h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+           <div class="modal-body">
+            <form>
+              <div class="mb-3">
+                <label for="exampleModalDescription2" class="col-form-label">Description:</label>
+                <textarea type="text" class="form-control modal-txt-area" id="exampleModalDescription4" disabled></textarea>
+              </div>
+              <div class="mb-3">
+                <label for="exampleModalTags2" class="col-form-label">Tags:</label>
+                <input class="form-control" id="exampleModalTags4" disabled>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- Modal -->
     <div class="modal fade" id="exampleModal3" tabindex="-1" aria-labelledby="exampleModalLabel3" aria-hidden="true">
@@ -280,6 +324,16 @@
             }
           });
         })
+        function showMore(id) {
+            target_element = id.substring(16);
+            console.log(target_element);
+            old_title = document.getElementById(`cardTitle_${target_element}`);
+            old_description = document.getElementById(`cardDescription_${target_element}`);
+            old_tags = document.getElementById(`cardTags_${target_element}`);
+            document.getElementById("ModalTitle4").innerText = old_title.innerText;
+            document.getElementById("exampleModalDescription4").value = old_description.innerText;
+            document.getElementById("exampleModalTags4").value = old_tags.innerText;
+        }
    
         function updateNote(){
             console.log(event.srcElement.id);
